--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+:root {
+  --color-titel: #2e2f42;
+  --color-text: #434455;
+  --color-primary: #4d5ae5;
+  --first-color-btn: #4d5ae5;
+  --second-color-btn: #f4f4fd;
+  --color-btn-active: #404bbf;
+  --first-color-text-btn: #fff;
+  --second-color-text-btn: #4d5ae5;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -19,7 +29,6 @@
 }
 .body {
   font-family: "Roboto", sans-serif;
-  color: #434455;
 }
 /*------------- HEADER------------------------*/
 .header {
@@ -34,12 +43,10 @@
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .header-part-logo {
-  color: #4d5ae5;
-}
-.header-navigation {
+  color: var(--color-primary);
 }
 .header-link {
   font-style: normal;
@@ -47,25 +54,25 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .header-link:hover,
 .header-link:focus {
-  color: #434455;
+  color: var(--color-text);
 }
 .header-link:active {
-  color: #4d5ae5;
+  color: var(--color-primary);
 }
 .header-tel {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text);
 }
 .header-tel:hover,
 .header-tel:focus {
-  color: #4d5ae5;
+  color: var(--color-primary);
 }
 
 .header-mail {
@@ -73,15 +80,15 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text);
 }
 .header-mail:hover,
 .header-mail:focus {
-  color: #4d5ae5;
+  color: var(--color-primary);
 }
 /*------------- HERO------------------------*/
 .hero {
-  background-color: #2e2f42;
+  background-color: var(--color-titel);
 }
 .hero-title {
   font-weight: 700;
@@ -98,34 +105,28 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
-  background-color: #4d5ae5;
+  color: var(--first-color-text-btn);
+  background-color: var(--first-color-btn);
+  cursor: pointer;
 }
 .hero-btn:active {
-  background-color: #404bbf;
+  background-color: var(--color-btn-active);
 }
 /*------------- BENEFITS------------------------*/
-.benefits {
-}
-.benefits-list {
-}
-.benefits-item {
-}
 .benefits-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .benefits-after-title {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: var(--color-text);
 }
 /*------------- EXAMPLES------------------------*/
-.examples {
-}
 .examples-title {
   font-weight: 700;
   font-size: 36px;
@@ -133,11 +134,7 @@
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
-}
-.examples-list {
-}
-.examples-item {
+  color: var(--color-titel);
 }
 /*------------- TEAM------------------------*/
 .team {
@@ -150,7 +147,7 @@
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .team-list {
   background-color: #fff;
@@ -164,13 +161,14 @@
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .team-after-subtitle {
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
+  color: var(--color-text);
 }
 /*------------- FOOTER------------------------*/
 .footer {
@@ -188,7 +186,7 @@
   color: #f4f4fd;
 }
 .footer-part-logo {
-  color: #4d5ae5;
+  color: var(--color-primary);
 }
 .footer-text {
   font-size: 16px;
@@ -197,12 +195,6 @@
   color: #e7e9fc;
 }
 /*------------- PORTFOLIO------------------------*/
-.portfolio {
-}
-.filters-list {
-}
-.filters-item {
-}
 .filters-btn {
   font-weight: 700;
   font-size: 16px;
@@ -210,18 +202,17 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #f4f4fd;
+  color: var(--first-color-btn);
+  background-color: var(--second-color-btn);
+  cursor: pointer;
 }
 .filters-btn:hover,
 .filters-btn:focus {
-  color: #ffffff;
-  background-color: #4d5ae5;
+  color: var(--first-color-text-btn);
+  background-color: var(--first-color-btn);
 }
 .filters-btn:active {
-  background-color: #404bbf;
-}
-.services-list {
+  background-color: var(--color-btn-active);
 }
 .services-item {
   background-color: #ffffff;
@@ -231,11 +222,11 @@
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-titel);
 }
 .services-pre-title {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text);
 }
